# entservices-framerate

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: L1-tests.yml  L2-tests-oop.yml  L2-tests.yml  native_full_build.yml
Tests/: README.md
Tests/L1Tests/: CMakeLists.txt
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: FrameRate_L2Test.cpp
helpers/: PluginInterfaceBuilder.h
plugin/: CMakeLists.txt  FrameRate.conf.in  FrameRate.config  FrameRate.cpp  FrameRate.h  FrameRateImplementation.cpp  FrameRateImplementation.h  README.md
